# cpptemplate

./: .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE.txt  README.md
.github/workflows/: ut.yml  ut_and_integration.yml
integration/: main.robot  requirements.txt
src/: main.cpp
src/include/: template.h  template.hpp  template_config.h.in
src/template/: CMakeLists.txt  template.c  template.cpp
test/: template_test.cpp  template_unittest.cpp
